# game-of-life

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  ansi1.c  ansi_console_size.c  bitbucket-pipelines.yml  cunit.c  game.c  game.h  helper.h  main.c  playground.h  point.c  point.h  t.c  test.c
.github/workflows/: mainCI.yml
circular/: CMakeLists.txt  circular.c  circular.h
clipped/: CMakeLists.txt  clipped.c  clipped.h
console/: CMakeLists.txt  ansi_console.c  board_drawer.h
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_cache_8txt.html  _c_make_files_2_game___of___life_8dir_2link_8txt.html  _c_make_files_2test__gol_8dir_2link_8txt.html  _c_make_lists_8txt.html  _c_make_rule_hashes_8txt.html  _c_test_cost_data_8txt.html  _target_directories_8txt.html  annotated.html  ansi__console_8c.html  board__drawer_8h.html  board__drawer_8h_source.html  circular_2_c_make_files_2circular_8dir_2link_8txt.html  circular_2_c_make_lists_8txt.html  circular_8c.html  circular_8h.html  circular_8h_source.html  classes.html  clipped_2_c_make_files_2clipped_8dir_2link_8txt.html  clipped_2_c_make_lists_8txt.html  clipped_8c.html  clipped_8h.html  clipped_8h_source.html  console_2_c_make_files_2console_8dir_2link_8txt.html  console_2_c_make_lists_8txt.html  dir_158f8e10468a31c83f99250d72bcbea2.html  dir_1622f548297469ac46a4dbb20843c29b.html  dir_18f7b2089f4f3b1ec5da20601196a3f0.html  dir_26151f8dd3075d5178b5d93a131b2706.html  dir_266cea8cf90ca3ee8193e456a051eb4b.html  dir_37c6514aeece95293041e34c0f2e0784.html  dir_37d4329c56da85f721c657815c87afdb.html  dir_45dfb8838b1122b94ac69c5a52682293.html  dir_4a2c4dfd925f922463bca80976e64025.html  dir_4aae352022469ad08e610fe3d6849023.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68d13bbd874068e91bf2b775754446e8.html  dir_75fe50f02e6a9f7f35673921ef166683.html  dir_791b54bd9203a6d00972725576bac15f.html  (+40 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_cache_8txt.tex  _c_make_files_2_game___of___life_8dir_2link_8txt.tex  _c_make_files_2test__gol_8dir_2link_8txt.tex  _c_make_lists_8txt.tex  _c_make_rule_hashes_8txt.tex  _c_test_cost_data_8txt.tex  _target_directories_8txt.tex  annotated.tex  ansi__console_8c.tex  board__drawer_8h.tex  circular_2_c_make_files_2circular_8dir_2link_8txt.tex  circular_2_c_make_lists_8txt.tex  circular_8c.tex  circular_8h.tex  clipped_2_c_make_files_2clipped_8dir_2link_8txt.tex  clipped_2_c_make_lists_8txt.tex  clipped_8c.tex  clipped_8h.tex  console_2_c_make_files_2console_8dir_2link_8txt.tex  console_2_c_make_lists_8txt.tex  dir_158f8e10468a31c83f99250d72bcbea2.tex  dir_1622f548297469ac46a4dbb20843c29b.tex  dir_18f7b2089f4f3b1ec5da20601196a3f0.tex  (+41 more)
game/: CMakeLists.txt  game.c  game.h  helper.c  helper.h  point.c  point.h
sdl/: CMakeLists.txt  sdl.c  sdl.h
(+61 files in other folders)
